[tool.poetry]
name = "hackathon-2023-3q-sample"
version = "0.1.0"
description = ""
authors = ["yu_hayashida"]
readme = "README.md"
packages = [{include = "hackathon_2023_3q_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
openai = "^0.27.8"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.4.0"
pandas = "^2.0.2"
langchain = "^0.0.214"
jupyter = "^1.0.0"
google-search-results = "^2.4.2"
pydantic = "^1.10.9"
llama-index = "^0.6.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
